# qgis-amazonlocationservice-plugin

./: .gitignore  README.md  README_ja.md  pyproject.toml
.github/workflows/: lint.yml  release.yaml  release.yml  test.yaml
location_service/: location_service.py  metadata.txt  test_suite.py
location_service/functions/: maps.py  places.py  routes.py
location_service/ui/: style.qss  style_loader.py
location_service/ui/config/: config.py  config.ui
location_service/ui/maps/: maps.py  maps.ui
location_service/ui/places/: places.py  places.ui
location_service/ui/routes/: routes.py  routes.ui
location_service/ui/terms/: terms.py
location_service/utils/: configuration_handler.py  external_api_handler.py
