[project]
name = "qgis-amazonlocationservice-plugin"
version = "2.0.1"
description = "QGIS Plugin for Amazon Location Service"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "MIERUNE Inc.", email = "info@mierune.co.jp" }
]
dependencies = []

[dependency-groups]
dev = [
    "pyqt5-stubs>=5.15.6.0",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "B",
    "N",
    "UP",
    "I",
    "C90",
    "C4",
    "DTZ",
    "PIE",
    "PT",
    "Q",
    "SIM",
    "RUF",
]
ignore = ["N802", "E501", "RUF001"]
